# gccli

./: README.md  pyproject.toml
gccli/: console.py  constants.py
gccli/client/: client.py  proxy.py
gccli/server/: gcvm.py  github.py  jvm.py  server.py
